--- a/main.css
+++ b/main.css
@@ -1,30 +1,69 @@
-.library {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.form-wrapper {
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    background-color: red;
-    padding: 10px 0;
-    margin-bottom: 50px;
+    justify-content: center;
+    padding: 40px 0;
+    border-bottom: 2px solid black;
+}
+
+form {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    text-align: center;
+}
+form > input {
+    margin-bottom: 5px;
+    padding: 10px;
+}
+#addBtn {
+    padding: 10px;
+}
+
+.library {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
 
 .book-item {
-    height: 250px;
-    width: 200px;
     font-size: 12px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    text-align: center;
     background-color: aquamarine;
     margin: 10px;
+    padding: 20px;
+    border-radius: 6px;
+}
+.book-item > h1, h2, p, div {
+    margin-bottom: 10px;
+}
+.book-item button {
+    background: none;
+    border: none;
+    margin-top: 40px;
+    margin-bottom: -20px;
+    cursor: pointer;
+}
+
+.button-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .book-read {
-    color: green;
+    background-color: rgb(68, 181, 68);
 }
 .book-not-read {
-    color: red;
-
+    background-color: rgb(255, 83, 83);
 }
